security/internal_external-tls_mtls_confluent-rbac/ingress-service-hostbased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-tls-reencryption
  namespace: confluent
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
      - mds.mydomain.com
      - controlcenter.mydomain.com
      - ksqldb.mydomain.com
      - connect.mydomain.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for mydomain.com
      secretName: tls-nginx-cert
  rules:
    - host: mds.mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mds-bootstrap
                port:
                  number: 8090
    - host: controlcenter.mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controlcenter-0-internal
                port:
                  number: 9021
    - host: ksqldb.mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ksqldb-bootstrap
                port:
                  number: 8088
    - host: connect.mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connect-bootstrap
                port:
                  number: 8083
